--- a/notebooks/tensor_label_model.ipynb
+++ b/notebooks/tensor_label_model.ipynb
@@ -522,11 +522,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "863e8a3d00400fe4468fdc67b63c0f5145e5ce101fe212dcf41ad0f296055747"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.5 ('py39')",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +537,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "61b4062b24dfb1010f420dad5aa3bd73a4d2af47d0ec44eafec465a35a9d7239"
+   }
   }
  },
  "nbformat": 4,
