Samples version of mu but it's wrong

--- a/notebooks/plots.ipynb
+++ b/notebooks/plots.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +83,9 @@
     "plt.figure(figsize=(5, 5))\n",
     "plt.plot(ns, T_pos_rec, label=r'$\\mathbf{\\hat{T}}^+$')\n",
     "plt.plot(ns, T_neg_rec, label=r'$\\mathbf{\\hat{T}}^-$')\n",
-    "#plt.xscale('log')\n",
+    "plt.xscale('log')\n",
     "plt.xlabel('n')\n",
-    "#plt.yscale('log')\n",
+    "plt.yscale('log')\n",
     "plt.ylabel(r'MSE($\\mathbf{T}, \\mathbf{\\hat{T}}$)')\n",
     "plt.legend(frameon=False)\n",
     "plt.show()"
