Update tensor label model

--- a/notebooks/tensor_label_model.ipynb
+++ b/notebooks/tensor_label_model.ipynb
@@ -124,24 +124,24 @@
     "    return t\n",
     "\n",
     "def tensor_decomp(M2, M3, comps):\n",
-    "    \"\"\" Tensor Decomposition Algorithm (pg. 2795, Algorithm 1)\n",
-    "        This is combined with reduction (4.3.1)\n",
+    "    \"\"\"Tensor Decomposition Algorithm (pg. 2795, Algorithm 1)\n",
+    "    This is combined with reduction (4.3.1)\n",
     "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        M2\n",
-    "            Symmetric matrix to aid the decomposition\n",
-    "        M3\n",
-    "            Symmetric tensor to be decomposed\n",
-    "        comps\n",
-    "            Number of eigencomponents to return\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    M2\n",
+    "        Symmetric matrix to aid the decomposition\n",
+    "    M3\n",
+    "        Symmetric tensor to be decomposed\n",
+    "    comps\n",
+    "        Number of eigencomponents to return\n",
     "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        mu_rec   \n",
-    "            Recovered eigenvectors (a matrix with #comps eigenvectors)\n",
-    "        lam_rec\n",
-    "            Recovered eigenvalues (a vector with #comps eigenvalues)            \n",
+    "    Returns\n",
+    "    -------\n",
+    "    mu_rec\n",
+    "        Recovered eigenvectors (a matrix with #comps eigenvectors)\n",
+    "    lam_rec\n",
+    "        Recovered eigenvalues (a vector with #comps eigenvalues)\n",
     "\n",
     "    \"\"\"\n",
     "    lam_rec = np.zeros(comps)\n",
@@ -155,23 +155,25 @@
     "        v = v[:, idx]\n",
     "\n",
     "        # keep only the positive eigenvalues\n",
-    "        n_eigpos = np.sum(lam > 10e-10)\n",
+    "        n_eigpos = np.sum(lam > 1e-1)\n",
     "        if n_eigpos > 0:\n",
-    "            W = v[:,:n_eigpos] @ np.diag(1.0/np.sqrt(np.abs(lam[:n_eigpos])))\n",
+    "            W = v[:, :n_eigpos] @ np.diag(1.0 / np.sqrt(np.abs(lam[:n_eigpos])))\n",
     "\n",
-    "            B = np.linalg.pinv(W.T)\n",
-    "            M3_tilde = multimap(M3, [W, W, W]) # reduction complete\n",
+    "            B = np.linalg.pinv(W.T)  # TODO look into this\n",
+    "            M3_tilde = multimap(M3, [W, W, W])  # reduction complete\n",
     "\n",
     "            # decomposition setup\n",
-    "            N        = 1000               # number of power iterations\n",
-    "            restarts = 10                 # number of random restarts\n",
-    "            tau_star = 0                  # best robust eigenvalue so far\n",
-    "            u_star   = np.zeros(n_eigpos) # best eigenvector so far\n",
+    "            # TODO try different hps if this doesn't work\n",
+    "            N = 10  # number of power iterations\n",
+    "            restarts = 1000  # number of random restarts # NOTE critical\n",
+    "            tau_star = 0  # best robust eigenvalue so far\n",
+    "            u_star = np.zeros(n_eigpos)  # best eigenvector so far\n",
     "\n",
     "            # repeated restarts to find best eigenvector\n",
     "            for j in range(restarts):\n",
     "                # randomly draw from unit sphere (step 2)\n",
-    "                u = np.random.rand(n_eigpos)\n",
+    "                # u = np.random.randn(n_eigpos)\n",
+    "                u = np.random.multivariate_normal(np.zeros(n_eigpos), np.eye(n_eigpos))\n",
     "                u /= np.linalg.norm(u)\n",
     "\n",
     "                # power iteration for N iterations\n",
@@ -194,14 +196,25 @@
     "            lamb = (T_map(M3_tilde, u) / u)[0]\n",
     "\n",
     "            # recover original eigenvector and eigenvalue pair\n",
-    "            mu_rec[:, b] = lamb* B @ u\n",
-    "            lam_rec[b] = 1/lamb**2\n",
+    "            mu_rec[:, b] = lamb * B @ u\n",
+    "            lam_rec[b] = 1 / lamb**2\n",
     "\n",
     "            # deflation: remove component, repeat\n",
-    "            M2 -= lam_rec[b] * np.outer(mu_rec[:,b], mu_rec[:,b])\n",
-    "            M3 -= three_tensor_prod(np.array(lam_rec[b]), mu_rec[:,b], mu_rec[:,b], mu_rec[:,b])\n",
+    "            M2 -= lam_rec[b] * np.outer(mu_rec[:, b], mu_rec[:, b])\n",
+    "            M3 -= three_tensor_prod(\n",
+    "                np.array(lam_rec[b]), mu_rec[:, b], mu_rec[:, b], mu_rec[:, b]\n",
+    "            )\n",
     "\n",
     "    return mu_rec, lam_rec\n",
+    "\n",
+    "def lowrank(x, k):\n",
+    "    u, s, vh = np.linalg.svd(x)\n",
+    "    s_abs = np.abs(s)\n",
+    "    inds = np.argsort(s_abs)[::-1][:k]\n",
+    "    rec = np.zeros_like(x)\n",
+    "    for i in inds:\n",
+    "        rec += s[i] * np.outer(u.T[i], vh[i])\n",
+    "    return rec\n",
     "\n",
     "class LabelModel():\n",
     "    def __init__(self, cardinality: int = 2, **kwargs: Any) -> None:\n",
@@ -244,6 +257,11 @@
     "        Ex1x2 /= self.n\n",
     "        Ex3x1 /= self.n \n",
     "        Ex2x1 /= self.n\n",
+    "\n",
+    "        Ex3x2 = lowrank(Ex3x2, k=self.cardinality)\n",
+    "        Ex1x2 = lowrank(Ex1x2, k=self.cardinality)\n",
+    "        Ex3x1 = lowrank(Ex3x1, k=self.cardinality)\n",
+    "        Ex2x1 = lowrank(Ex2x1, k=self.cardinality)\n",
     "\n",
     "        for k in range(self.n):\n",
     "            x1, x2, x3 = np.zeros(r), np.zeros(r), np.zeros(r)\n",
@@ -357,43 +375,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.6, 0.7],\n",
-       "       [0.3, 0.1],\n",
-       "       [0.1, 0.2]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mu_true[0:3,:]"
+    "#mu_true[0:3,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 1., 1., 1., 1., 0., 0., 1., 0., 0., 1., 1., 1., 0., 0., 0., 1.,\n",
-       "       0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 0.,\n",
-       "       1., 1., 1., 1., 1., 0., 0., 0., 1., 0., 0., 1., 1., 0., 1., 1., 0.,\n",
-       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 0.,\n",
-       "       1., 0., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 0., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 1.])"
+       "array([1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 0.,\n",
+       "       1., 0., 0., 0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0., 1.,\n",
+       "       1., 1., 1., 0., 0., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 0., 0., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1.,\n",
+       "       0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,48 +429,16 @@
      "output_type": "stream",
      "text": [
       "working with 10000 samples\n",
-      "got mu_rec, lam_rec = [[0.57652994 0.7001129 ]\n",
-      " [0.32452099 0.09091676]\n",
-      " [0.08276267 0.21341308]] [0.31946091 0.68573332]\n",
-      "got mu_rec, lam_rec = [[0.57680001 0.58228019]\n",
-      " [0.29746151 0.08441464]\n",
-      " [0.12169771 0.33291243]] [0.48971308 0.51537433]\n",
-      "got mu_rec, lam_rec = [[0.49067164 0.72322234]\n",
-      " [0.39282666 0.02968818]\n",
-      " [0.15886408 0.23557275]] [0.33259259 0.65505864]\n",
-      "for 10000 samples, recovery error 0.1792132482710557\n",
-      "working with 100000 samples\n",
-      "got mu_rec, lam_rec = [[0.5942395  0.70217667]\n",
-      " [0.3028161  0.10417108]\n",
-      " [0.09780553 0.1959617 ]] [0.27764894 0.72299164]\n",
-      "got mu_rec, lam_rec = [[0.55294298 0.59856775]\n",
-      " [0.3964381  0.09893685]\n",
-      " [0.05500011 0.30084347]] [0.29595632 0.70453711]\n",
-      "got mu_rec, lam_rec = [[0.48916158 0.69982366]\n",
-      " [0.40302635 0.05518402]\n",
-      " [0.0978565  0.24520311]] [0.29060039 0.71498356]\n",
-      "for 100000 samples, recovery error 0.019822595132703437\n",
-      "working with 1000000 samples\n",
-      "got mu_rec, lam_rec = [[ 0.34615179  0.60134474]\n",
-      " [-0.06535224  0.30389854]\n",
-      " [ 0.02786184  0.09784431]] [0.00759575 0.28764543]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/__/0w8vfjqx5vj647ww00jt051h0000gn/T/ipykernel_62167/2548884086.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mlabel_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLabelModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcardinality\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mlabel_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# parameter recovery error on the mu's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/__/0w8vfjqx5vj647ww00jt051h0000gn/T/ipykernel_62167/4045967053.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, L_train)\u001b[0m\n\u001b[1;32m    285\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moverlaps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m                     \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 287\u001b[0;31m             \u001b[0mmu_rec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmu_recovery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    289\u001b[0m             \u001b[0;31m# set the recovered mu component\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/__/0w8vfjqx5vj647ww00jt051h0000gn/T/ipykernel_62167/4045967053.py\u001b[0m in \u001b[0;36mmu_recovery\u001b[0;34m(self, triplet_idx_a, triplet_idx_b, triplet_idx_c)\u001b[0m\n\u001b[1;32m    219\u001b[0m             \u001b[0mx3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtriplet_idx_c\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m             \u001b[0mx_tilde_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEx3x2\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpinv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEx1x2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m             \u001b[0mx_tilde_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEx3x1\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpinv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEx2x1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mpinv\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36mpinv\u001b[0;34m(a, rcond, hermitian)\u001b[0m\n\u001b[1;32m   2000\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2001\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconjugate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2002\u001b[0;31m     \u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull_matrices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhermitian\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhermitian\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2003\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2004\u001b[0m     \u001b[0;31m# discard small singular values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msvd\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36msvd\u001b[0;34m(a, full_matrices, compute_uv, hermitian)\u001b[0m\n\u001b[1;32m   1658\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1659\u001b[0m         \u001b[0msignature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'D->DdD'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'd->ddd'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1660\u001b[0;31m         \u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgufunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msignature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msignature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1661\u001b[0m         \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1662\u001b[0m         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_realType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "got mu_rec, lam_rec = [[0.66998758 0.        ]\n",
+      " [0.15782961 0.        ]\n",
+      " [0.17192876 0.        ]] [1.00044762 0.        ]\n",
+      "got mu_rec, lam_rec = [[0.58007223 0.        ]\n",
+      " [0.18071107 0.        ]\n",
+      " [0.23731416 0.        ]] [0.99933828 0.        ]\n",
+      "got mu_rec, lam_rec = [[0.66474852 0.        ]\n",
+      " [0.13469038 0.        ]\n",
+      " [0.21421256 0.        ]] [0.95902947 0.        ]\n",
+      "for 10000 samples, recovery error 0.8767689350675498\n"
      ]
     }
    ],
